tests/integrations/basic/tests/actual_tests/no_rustfix.stderr
error: variable does not need to be mutable
 --> $DIR/no_rustfix.rs:6:9
  |
6 |     let mut x = 42;
  |         ----^
  |         |
  |         help: remove this `mut`
  |
note: the lint level is defined here
 --> $DIR/no_rustfix.rs:3:9
  |
3 | #![deny(warnings)]
  |         ^^^^^^^^
  = note: `#[deny(unused_mut)]` implied by `#[deny(warnings)]`

error: aborting due to previous error

